--- a/package.json
+++ b/package.json
@@ -211,6 +211,48 @@
       {
         "command": "terraform.plan",
         "title": "Terraform: plan"
+      },
+      {
+        "command": "terraform.modules.refreshList",
+        "title": "Refresh",
+        "icon": "$(refresh)"
+      },
+      {
+        "command": "terraform.modules.documentation",
+        "title": "Open Documentation",
+        "icon": "$(book)"
+      }
+    ],
+    "menus": {
+      "view/title": [
+        {
+          "command": "terraform.modules.refreshList",
+          "when": "view == terraform.modules",
+          "group": "navigation"
+        }
+      ],
+      "view/item/context": [
+        {
+          "command": "terraform.modules.documentation",
+          "when": "view == terraform.modules"
+        }
+      ]
+    },
+    "views": {
+      "explorer": [
+        {
+          "id": "terraform.modules",
+          "name": "Terraform Module Calls",
+          "icon": "assets/icons/terraform.svg",
+          "visibility": "collapsed",
+          "when": "terraform.showModuleView"
+        }
+      ]
+    },
+    "viewsWelcome": [
+      {
+        "view": "terraform.modules",
+        "contents": "The active editor cannot provide module information. [Learn more](https://www.terraform.io/docs/language/modules/develop/index.html)"
       }
     ]
   },
