--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "displayName": "HashiCorp Terraform",
   "description": "Syntax highlighting and autocompletion for Terraform",
   "version": "2.14.0",
-  "publisher": "hashicorp",
+  "publisher": "hashicorpsandbox",
   "license": "MPL-2.0",
   "engines": {
     "npm": "^7.17.0",
