--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,11 @@
 name: Publish release
-on:
-  release:
-    types:
-      - published
+
+on: 
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to publish'     
+        required: true
 
 jobs:
   publish:
@@ -18,6 +21,6 @@ jobs:
       - name: Clean install dependencies
         run: npm ci
       - name: vsce publish
-        run: vsce publish
+        run: vsce publish ${{ github.event.inputs.version }}
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
