--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,9 +18,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
-      - name: Clean install dependencies
+      - name: Install dependencies
         run: npm ci
       - name: vsce publish
-        run: vsce publish ${{ github.event.inputs.version }}
+        run: npm exec -- vsce publish ${{ github.event.inputs.version }}
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
