--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,10 @@ jobs:
           node-version: '14.x'
       - name: Install dependencies
         run: npm ci
+      - name: Configure git author
+        run: |
+          git config user.email "hashibot-feedback@hashicorp.com"
+          git config user.name "HashiBot"
       - name: vsce publish
         run: npx -- vsce publish ${{ github.event.inputs.version }}
         env:
