--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,5 +30,5 @@ jobs:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
       - name: git push
         run: |
-          git push main
-          git push ${{ github.event.inputs.version }}
+          git push origin main
+          git push origin v${{ github.event.inputs.version }}
