--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,20 +4,32 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version to publish & tag & push'     
+        description: 'Version to publish & tag & push (without "v" prefix)'
+        required: true
+      changelog_updated:
+        description: 'Did you update the changelog? ("yes")'
         required: true
 
 jobs:
   publish:
-    name: Publish to Marketplace
+    name: Publish to VS Code Marketplace
     runs-on: windows-latest
     steps:
+      - name: Ensure changelog is updated
+        if: ${{ github.event.inputs.changelog_updated != 'yes' }}
+        run: exit 1
       - name: Check out repository
         uses: actions/checkout@v2
-      - name: Set up Node
+      - name: Read Node.js version
+        id: nodejs-version
+        run: |
+          $content = Get-Content .\.nvmrc -Raw
+          echo "::set-output name=content::$content"
+      - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '14.x'
+          # See https://github.com/actions/setup-node/issues/32
+          node-version: ${{ steps.nodejs-version.outputs.content }}
       - name: Install dependencies
         run: npm ci
       - name: Configure git author
