--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,9 @@ jobs:
         with:
           terraform_wrapper: false
           terraform_version: "~1.0"
+      - name: Set up Xvfb (Ubuntu)
+        run: |
+          /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
       - name: npm test
         run: npm test
       - name: Configure git author
