--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,8 +41,10 @@ jobs:
           terraform_version: "~1.0"
       - name: Setup Xvfb
         run: |
-          Xvfb :99 -screen 0 1024x768x24 &
+          Xvfb :99 -screen 0 1024x768x24 >/tmp/xvfb-stdout.log 2>/tmp/xvfb-stderr.log &
           echo ">>> Started xvfb"
+          cat /tmp/xvfb-stdout.log
+          cat /tmp/xvfb-stderr.log
       - name: npm test
         run: npm test
       - name: Configure git author
