--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,8 +39,12 @@ jobs:
         with:
           terraform_wrapper: false
           terraform_version: "~1.0"
+      - name: Set up Xvfb
+        run: |
+          /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+          echo ">>> Started xvfb"
       - name: npm test
-        run: xvfb-run --server-args='-screen 0 1024x768x24' npm test
+        run: npm test
       - name: Configure git author
         run: |
           git config user.email "hashibot-feedback@hashicorp.com"
