--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,27 +1,27 @@
 name: Publish release
 
-on: 
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to publish & tag & push (without "v" prefix)'
-        required: true
-      changelog_updated:
-        description: 'Did you update the changelog? ("yes")'
-        required: true
+on:
+  push:
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+*'
 
 jobs:
   publish:
     name: Publish to VS Code Marketplace
     runs-on: ubuntu-latest
     steps:
-      - name: Ensure changelog is updated
-        if: ${{ github.event.inputs.changelog_updated != 'yes' }}
-        run: |
-          echo "Response: ${{ github.event.inputs.changelog_updated }} (expected yes)"
-          exit 1
       - name: Check out repository
         uses: actions/checkout@v2
+      - name: Read extension version
+        id: ext-version
+        run: |
+          content=`cat ./package.json | jq -r .version`
+          echo "::set-output name=content::$content"
+      - name: Ensure version matches with tag
+        if: ${{ github.ref != format('refs/tags/{0}', steps.ext-version.outputs.content) }}
+        run: |
+          echo "Version mismatch!\nTag: ${{ github.ref }}\nPackage: ${{ steps.ext-version.outputs.content }}"
+          exit 1
       - name: Read Node.js version
         id: nodejs-version
         run: |
@@ -32,6 +32,10 @@ jobs:
         with:
           # See https://github.com/actions/setup-node/issues/32
           node-version: ${{ steps.nodejs-version.outputs.content }}
+      - name: Set up Xvfb (Ubuntu)
+        run: |
+          /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+          echo ">>> Started xvfb"
       - name: Install dependencies
         run: npm ci
       - name: Install Terraform
@@ -39,20 +43,11 @@ jobs:
         with:
           terraform_wrapper: false
           terraform_version: "~1.0"
-      - name: Configure git author
-        run: |
-          git config user.email "hashibot-feedback@hashicorp.com"
-          git config user.name "HashiBot"
-      - name: Check latest published extension version
+      - name: Check latest published version
         run: |
           export EXTENSION_ID=`cat package.json | jq -r '.publisher + "." + .name'`
           npx -- vsce show --json $EXTENSION_ID | jq '.versions[0]'
       - name: vsce publish
-        run: npx -- vsce publish ${{ github.event.inputs.version }}
+        run: npx -- vsce publish --no-git-tag-version
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
-      - name: git push
-        run: |
-          defaultBranch=`git branch --show-current`
-          git push origin $defaultBranch
-          git push origin v${{ github.event.inputs.version }}
