--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
           content=`cat ./package.json | jq -r .version`
           echo "::set-output name=content::$content"
       - name: Ensure version matches with tag
-        if: ${{ github.ref != format('refs/tags/{0}', steps.ext-version.outputs.content) }}
+        if: ${{ github.ref != format('refs/tags/v{0}', steps.ext-version.outputs.content) }}
         run: |
           echo "Version mismatch!\nTag: ${{ github.ref }}\nPackage: ${{ steps.ext-version.outputs.content }}"
           exit 1
