--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,9 @@ jobs:
       - name: Ensure version matches with tag
         if: ${{ github.ref != format('refs/tags/v{0}', steps.ext-version.outputs.content) }}
         run: |
-          echo "Version mismatch!\nTag: ${{ github.ref }}\nPackage: ${{ steps.ext-version.outputs.content }}"
+          echo "Version mismatch!"
+          echo "Received ref: ${{ github.ref }}"
+          echo "Expected ref: refs/tags/v${{ steps.ext-version.outputs.content }}"
           exit 1
       - name: Read Node.js version
         id: nodejs-version
