--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,23 +34,14 @@ jobs:
         with:
           # See https://github.com/actions/setup-node/issues/32
           node-version: ${{ steps.nodejs-version.outputs.content }}
-      - name: Set up Xvfb (Ubuntu)
-        run: |
-          /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-          echo ">>> Started xvfb"
       - name: Install dependencies
         run: npm ci
-      - name: Install Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_wrapper: false
-          terraform_version: "~1.0"
       - name: vsce package
         run: npx -- vsce package --out=${{ runner.temp }}/terraform-${{ steps.ext-version.outputs.content }}.vsix
       - name: Upload vsix as artifact
         uses: actions/upload-artifact@v2
         with:
-          name: terraform-${{ steps.ext-version.outputs.content }}.vsix
+          name: terraform-${{ steps.ext-version.outputs.content }}
           path: ${{ runner.temp }}/terraform-${{ steps.ext-version.outputs.content }}.vsix
       - name: Check latest published version
         run: |
